# mcp230xx

./: Cargo.toml  README.md
.github/: bors.toml
.github/workflows/: ci.yml
src/: lib.rs  mcp23008.rs  mcp23017.rs
