[package]
name = "mcp23017"
version = "1.0.0"
description = "A rust driver for the MCP23017 (16-Bit I2C I/O Expander with Serial Interface)"
authors = ["Luca Zulian <lucagiuggia@gmail.com>", "Robert Jördens <rj@quartiq.de>"]
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["hal", "IO"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/lucazulian/mcp23017"
edition = "2018"
exclude = [
    "docs/",
    "docs/*",
]

[dependencies]
embedded-hal = "0.2.3"
bit_field = "0.10.1"
num_enum = { version = "0.5.7", default-features = false }

