[package]
name = "mcp230xx"
version = "1.0.0"
description = "MCP23008/MCP23017 8/16-Bit I2C I/O Expander with I2C Interface"
authors = ["Luca Zulian <lucagiuggia@gmail.com>", "Robert Jördens <rj@quartiq.de>", "Norman Krackow <nk@quartiq.de>"]
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["hal", "IO", "mcp23017", "mcp23008", "I2C"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/quartiq/mcp230xx"
edition = "2021"
exclude = [
    "docs/",
    "docs/*",
]

[dependencies]
embedded-hal = "0.2.3"
bit_field = "0.10.1"
num_enum = { version = "0.5.7", default-features = false }
paste = "1.0.8"
